--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	},
 	"dependencies": {
 		"express": "4.13.x",
-		"cfenv": "1.0.x"
+    "cfenv": "1.0.x",
+    "request": "2.79.0",
+    "lodash": "4.17.4"
 	},
 	"repository": {},
 	"engines": {
